fix: ingredient cost based on components